--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 ﻿<div class="col-md-6 offset-md-3 mt-5">
     <div class="alert alert-info">
+        Test User Data <br/><br/>
         Username: test<br />
         Password: test
     </div>
